--- a/etc/exim4/update-exim4.conf.conf
+++ b/etc/exim4/update-exim4.conf.conf
@@ -17,15 +17,15 @@
 # This is a Debian specific file
 
 dc_eximconfig_configtype='internet'
-dc_other_hostnames='perseu; localhost.localdomain; locahost'
+dc_other_hostnames=''
 dc_local_interfaces='127.0.0.1 ; ::1'
-dc_readhost=''
+dc_readhost='til4050n02'
 dc_relay_domains=''
 dc_minimaldns='false'
 dc_relay_nets=''
 dc_smarthost=''
 CFILEMODE='644'
 dc_use_split_config='false'
-dc_hide_mailname=''
+dc_hide_mailname='true'
 dc_mailname_in_oh='true'
-dc_localdelivery='maildir_home'
+dc_localdelivery='mail_spool'
